@@ -90,6 +90,8 @@ class MeshPrimitive : public Primitive
 		static MeshPrimitivePtr createBox( const Imath::Box3f &b );
 		/// Creates a plane at z=0, with the geometric normal facing down positive z.
 		static MeshPrimitivePtr createPlane( const Imath::Box2f &b, const Imath::V2i &divisions = Imath::V2i( 1 ) );
+		/// Creates a sphere
+		static MeshPrimitivePtr createSphere( float radius, float zMin = -1.0f, float zMax = 1.0f, float thetaMax = 360.0f, const Imath::V2i &divisions = Imath::V2i( 20, 40 ) );
 		
 		virtual void topologyHash( MurmurHash &h ) const;
 
